bug 956, hopefully this is the last one for now.  Still broken on Linux, but better on PC and Mac...
git-svn-id: http://publicsvn.songbirdnest.com/client/trunk@2225 5aad4ff5-4b58-4159-ba3f-0e6328df4cad

--- a/feathers/rubberducky/content/css/dialog.css
+++ b/feathers/rubberducky/content/css/dialog.css
@@ -613,7 +613,7 @@ menulist
   min-height:4px !important;
   max-width:6px !important;
   max-height:4px !important;
-  margin: 8px 0px 8px 0px !important;
+  margin: 10px 0px 10px 0px !important;
   background-position: center center !important;
   border: none !important;
 }
